Update das versões Ubuntu base (de ubuntu:14.04 para ubuntu:17.04) NGINX (de 1.11.4 para 1.12.0) Pagespeed (de 1.11.33.3 para 1.12.34.2) RTMP (de 1.1.9 para 1.1.11)

--- a/examples/01-docker.com/nginx.conf
+++ b/examples/01-docker.com/nginx.conf
@@ -1,5 +1,5 @@
 #user  nobody;
-worker_processes  1;
+worker_processes  5;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -29,9 +29,13 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
     pagespeed GlobalStatisticsPath /ngx_pagespeed_global_statistics;
     pagespeed GlobalAdminPath /pagespeed_global_admin;
+    pagespeed RewriteLevel OptimizeForBandwidth;
+    pagespeed ForceCaching on;
+    pagespeed StatisticsLoggingIntervalMs 60000;
+    pagespeed StatisticsLoggingMaxFileSizeKb 1024;
 
     server {
         listen       80;
@@ -44,12 +48,15 @@ http {
         pagespeed ConsolePath /pagespeed_console;
         pagespeed AdminPath /pagespeed_admin;
 
+        pagespeed Statistics on;
+        pagespeed StatisticsLogging on;
         pagespeed StatisticsPath /pagespeed_statistics;
+        pagespeed LogDir /var/ngx_pagespeed_log;
 
         # Ensure requests for pagespeed optimized resources go to the pagespeed handler
         # and no extraneous headers get set.
         location ~ "\.pagespeed\.([a-z]\.)?[a-z]{2}\.[^.]{10}\.[^.]+" {
-        add_header "" "";
+            add_header "" "";
         }
         location ~ "^/pagespeed_static/" { }
         location ~ "^/ngx_pagespeed_beacon$" { }        
@@ -73,17 +80,27 @@ http {
         #}
 
          location / {
+            
+            
+            
+            
+            proxy_pass      http://www.correios.com.br;            
+            proxy_set_header Host www.correios.com.br;
+            #proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Accept-Encoding "deflate, sdch, br";
 
-            pagespeed EnableFilters move_css_to_head;
-            pagespeed EnableFilters combine_javascript;
-            pagespeed MaxCombinedJsBytes 999999999;
+            subs_filter_types text/css text/xml application/javascript text/javascript;
+            subs_filter www.correios.com.br localhost;
+
+            pagespeed RewriteLevel PassThrough;
+            pagespeed EnableFilters combine_css,extend_cache,rewrite_images;
+            pagespeed EnableFilters rewrite_css,rewrite_javascript;
+            pagespeed MaxCombinedCssBytes 9999999999;
+            pagespeed MaxCombinedJsBytes 9999999999;
+            pagespeed MaxSegmentLength 1024;
             pagespeed CombineAcrossPaths on;
-            pagespeed MaxSegmentLength 2048;
-            pagespeed EnableFilters responsive_images,resize_images;
-            pagespeed EnableFilters responsive_images_zoom;
-            pagespeed EnableFilters collapse_whitespace;
-            proxy_pass      https://www.docker.com:443/;
-            proxy_set_header X-Real-IP $remote_addr;
+            #pagespeed RewriteLevel CoreFilters;
+            #pagespeed InPlaceResourceOptimization on;
         }
 
 
